# pytorch_learning

./: .gitignore  MaxPool.py  README.md  _demo.py  dataloader.py  main.py  pyproject.toml  test.py  third_model.py  train.py
train_models/: cifar10_cnn_10.pth  cifar10_cnn_20.pth
yolo/: README.md  main.py
