[project]
name = "pytorch-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "pillow>=12.0.0",
    "tensorboard>=2.20.0",
    "torch==2.4.1",
    "torch-directml>=0.2.5.dev240914",
    "torchvision==0.19.1",
]
